src/objects/QuoteLineItem.object
<CustomObject>
    <fields>
        <fullName>Additional_GP_Discount_Amount__c</fullName>
        <label>Additional GP Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area_ft__c</fullName>
        <label>Area (ft²)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <formula>Product2.Asset_Class__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Asset Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Rate__c</fullName>
        <label>Best Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Best_Rate_for_Proposed_GP__c</fullName>
        <label>Best Rate for Proposed GP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <label>Charge Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Service Charge</fullName>
                </value>
                <value>
                    <fullName>Grace Period</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOA_Discount2__c</fullName>
        <formula>Offer_Best_Discount_Amount__c +  Additional_GP_Discount_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DOA Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DOA_Discount_Amount__c</fullName>
        <label>DOA Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_GP_Discount_Amount__c</fullName>
        <label>Default GP Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Grace_Period_Format__c</fullName>
        <label>Default Grace Period Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>days</fullName>
                </value>
                <value>
                    <fullName>months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Grace_Period_Mechanism__c</fullName>
        <label>Default Grace Period Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>initial</fullName>
                </value>
                <value>
                    <fullName>every</fullName>
                </value>
                <value>
                    <fullName>end</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Grace_Period_Months__c</fullName>
        <label>Default Grace Period(Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Grace_Period__c</fullName>
        <label>Default Grace Period</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Discount__c</fullName>
        <label>Grace Period Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Period_Format__c</fullName>
        <label>Offered Grace Period Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>days</fullName>
                </value>
                <value>
                    <fullName>months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grace_Period_Mechanism__c</fullName>
        <label>Offered Grace Period Mechanism</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>initial</fullName>
                </value>
                <value>
                    <fullName>every</fullName>
                </value>
                <value>
                    <fullName>end</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grace_Period_Value__c</fullName>
        <label>Grace Period Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grace_Period__c</fullName>
        <inlineHelpText>If &apos;Offered Grace Period&apos; is blank, the Grace Period listed at the Quote will be used for price calculation.</inlineHelpText>
        <label>Offered Grace Period</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Registered_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Registered Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_Price_Rate__c</fullName>
        <label>List Price Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Negative_GP_Discount_Amount__c</fullName>
        <label>Negative GP Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Beds__c</fullName>
        <label>No of Beds</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Best_Discount_Amount__c</fullName>
        <formula>IF(Total_Best_Rate__c &gt; Total_Offered_Price__c,Total_Best_Rate__c-Total_Offered_Price__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offer/Best Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offer_Price__c</fullName>
        <label>Offer Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Offered_Price_Rate__c</fullName>
        <label>Offered Price Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_Quote_Line_Item__c</fullName>
        <label>Parent Quote Line Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Yardi_Code__c</fullName>
        <formula>IF( CONTAINS( PriceSch_ChargeType__c , &quot;Service Charge&quot;) , &quot;Annual&quot;,  TEXT(Quote.Payment_Terms__r.Yardi_Code__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term Yardi Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceSch_ChargeType__c</fullName>
        <formula>Price_Schedule__r.Charge_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Charge Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Schedule</label>
        <referenceTo>Price_Schedule__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Active__c</fullName>
        <formula>Product2.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Product2.Property_Code__c</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proration_Method__c</fullName>
        <label>Proration Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                    <default>true</default>
                    <label>Monthly</label>
                </value>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Revision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Revision</label>
        <referenceTo>Quote_Revision__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Grace_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Grace Period</label>
        <referenceTo>Grace_Period__c</referenceTo>
        <relationshipLabel>Quote Line Items</relationshipLabel>
        <relationshipName>Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <label>Revision Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <formula>Product2.Unit_Sub_Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOTAL_Discount__c</fullName>
        <formula>Default_GP_Discount_Amount__c + DOA_Discount2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TOTAL Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Best_Rate__c</fullName>
        <label>Total Best Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_List_Price__c</fullName>
        <label>Total List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Offered_Price__c</fullName>
        <label>Total Offered Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Unit__c</fullName>
        <formula>IF(ISBLANK(TEXT(Transactional_Unit__c)),TEXT(Product2.Transaction_Unit__c),TEXT(Transactional_Unit__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transactional_Unit__c</fullName>
        <label>Transactional Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sqft</fullName>
                </value>
                <value>
                    <fullName>Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grace Period</fullName>
                </value>
                <value>
                    <fullName>Revision</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Name__c</fullName>
        <formula>Product2.Unit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unit Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upselling_Discount_Amount__c</fullName>
        <formula>IF(Total_Offered_Price__c&gt;Total_Best_Rate__c,Total_Offered_Price__c-Total_Best_Rate__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upselling_Discount_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yardi_Charge_Code__c</fullName>
        <formula>IF( ISPICKVAL( Type__c , &quot;Grace Period&quot;) , &quot;grcper&quot;, Price_Schedule__r.Charge_Type__r.Yardi_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardi Charge Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Code__c</fullName>
        <formula>Product2.Unique_Yardi_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardi Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Error_Message__c</fullName>
        <label>Yardi Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Status__c</fullName>
        <label>Yardi Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Integration</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yardi_Unit_ID__c</fullName>
        <formula>Product2.Yardi_Unit_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardi Unit ID</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Add_Unit_When_For_Opp_Renewal</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISNEW(), ISPICKVAL(Quote.Opportunity.Type, &apos;Renewal&apos;), ISPICKVAL( Quote.Opportunity.Sub_Type__c, &apos;Renewal&apos;))</errorConditionFormula>
        <errorMessage>You Cannot Add Quote Line Item on Renewal Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_add_line_items_if_quote_approved</fullName>
        <active>true</active>
        <description>Cannot add or edit the quote line items if quote is approved.</description>
        <errorConditionFormula>ISPICKVAL( Quote.Status ,&quot;Approved&quot;)</errorConditionFormula>
        <errorMessage>You cannot add or edit any quote line item for &quot;Approved&quot; quote.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_remove_QLI_if_Opportunity</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(Quote.Opportunity.Type, &apos;Renewal&apos;), ISPICKVAL(Quote.Opportunity.Sub_Type__c, &apos;Expansion&apos;))</errorConditionFormula>
        <errorMessage>Cannot remove QLI if Opportunity Type is Renewal and Sub Type is Expansion.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_can_not_exceed_9</fullName>
        <active>true</active>
        <errorConditionFormula>! REGEX(TEXT(Quantity), &quot;^[0-9]{1,9}$&quot; )</errorConditionFormula>
        <errorDisplayField>Quantity</errorDisplayField>
        <errorMessage>Quantity can not have more than 9 characters and no decimals</errorMessage>
    </validationRules>
</CustomObject>